tests/ui/consts/const_limit/const_eval_limit_overflow.stderr
error: `limit` must be a non-negative integer
  --> $DIR/const_eval_limit_overflow.rs:2:1
   |
LL | #![const_eval_limit="18_446_744_073_709_551_615"]
   | ^^^^^^^^^^^^^^^^^^^^----------------------------^
   |                     |
   |                     not a valid integer

error: aborting due to previous error

